<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetMovieInfo</string>
    <string name="welcome_message">Welcome to Get Movie Info</string>
    <string name="type_message">Enter with the movie title</string>
    <string name="search_message">Search for movie title</string>
    <string name="ok_button">OK</string>
    <string name="back_button">Back</string>
    <string name="my_list_button">My List</string>
    <string name="clear_all_button">Clear all</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="my_List_Text">My List</string>
    <string name="title_activity_my_list">MyListActivity</string>
    <string name="dYear">Year:</string>
    <string name="dGenre">Genre:</string>
    <string name="dTime">Time:</string>
    <string name="dDirector">Director:</string>
    <string name="dActors">Actors:</string>
    <string name="dLanguage">Language:</string>
    <string name="dCountry">Country:</string>
    <string name="alert_dialog_clear_item">Are you sure you want to delete this item?</string>
    <string name="alert_dialog_clear_all">Are you sure you want to delete all items?</string>
    <string name="alert_dialog_title">Attention</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>
    
    
</resources>